<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InductionHob</string>
    <string name="unknown_temperatue">--</string>
    <string name="program_on">Stop program</string>
    <string name="program_off">Start program</string>
    <string name="connectedBoxDesc">Indication of Connection to the Induction Hob</string>
    <string name="poweredBoxDesc">Shows if the Induction hob is powered on</string>
    <string name="defaultZoneText"></string>
    <string name="doneText">Done</string>
    <string name="zoneDialogTitle"></string>

    <string-array name="programs_array">
        <item>Milk</item>
        <item>Target temp</item>
    </string-array>
    <string name="default_temp">30\u2103</string>
    <string name="max_temp">150\u2103</string>
</resources>