<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:clipChildren="false"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/connectedBox"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/connectedBoxDesc"
            android:src="@drawable/empty" />

        <ImageView
            android:id="@+id/poweredBox"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/poweredBoxDesc"
            android:src="@drawable/empty" />

        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/unknown_temperatue"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
    <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
        >
        <ImageView
            android:id="@+id/inductionHob"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/poweredBoxDesc"
            android:src="@drawable/inductionhob" />
        <TableLayout
            android:layout_width="fill_parent"
            android:stretchColumns="true"
            android:shrinkColumns="true"
            android:layout_height="fill_parent" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >
                <test.androidapp.ui.Zone
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/leftBackZone"
                    android:textSize="40sp"
                    android:textColor="#ffffff"
                    custom:icon="@+id/zone_back_left"
                    android:text="@string/defaultZoneText"/>
                <test.androidapp.ui.Zone
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/rightBackZone"
                    android:textSize="40sp"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    android:textColor="#ffffff"
                    custom:icon="@+id/zone_back_right"
                    android:text="@string/defaultZoneText"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >
                <test.androidapp.ui.Zone
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/leftFrontZone"
                    android:textSize="40sp"
                    android:textColor="#ffffff"
                    custom:icon="@+id/zone_front_left"
                    android:text="@string/defaultZoneText"/>
                 <test.androidapp.ui.Zone
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:id="@+id/rightFrontZone"
                    android:textSize="40sp"
                    android:textColor="#ffffff"
                    android:gravity="right"
                    android:textAlignment="gravity"
                    custom:icon="@+id/zone_front_right"
                    android:text="@string/defaultZoneText"/>
             </TableRow>
        </TableLayout>
    </RelativeLayout>
</LinearLayout>